--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 
 [dependencies]
+wasm-bindgen = "0.2"
+web-sys = {version ="*" , features = ["console"]}
 rs_poker = "3.0.0-beta.25"
 rand = "*"
 dioxus = {version = "*" , features=["web"]}
